# django_newshop

./: .gitignore  all_services.py  homevenv_start  jobevenv_start  manage.py  package-lock.json  package.json  plan  pyproject.toml  pyrightconfig.json  requirements.txt  servises.py  session.session  session_name.session
ROOTAPP/: admin.py  admin_forms.py  apps.py  forms.py  models.py  urls.py  views.py
Shop_DJ/: asgi.py  settings.py  urls.py  wsgi.py
backup_db/: attr.sql  banner  banner.sql  brand.sql  cat.sql  comb1.sql  comb2.sql  country.sql  filter.sql  finance_price.sql  fixed_vals.sql  group.sql  group_cat.sql  mainattr.sql  menu.sql  messeng  new_prod.sql  phone.sql  plug.sql  pop_prod.sql  popcat.sql  product.sql  product_img.sql  product_place.sql  product_price.sql  series.sql  shedule.sql  shot.sql  site_phone.sql  supplier.sql  thumb.sql  unit_measure.sql
catalog/: admin.py  admin_forms.py  apps.py  models.py  services.py  shell.py  tests.py  urls.py  views.py
context_processors/: common_context.py
errors/: AttributeError at _admin_catalog_category_(удалял все категории).html  ValueError at _admin_catalog_product_add_(удалил категории и создаю товар).html  city.txt  settlement  streets.txt  Загрузка отделения.odt  Олександрівка city.txt
finance/: admin.py  admin_forms.py  models.py  models2.py  services.py  urls.py  views.py
main_page/: admin.py  admin_form.py  apps.py  models.py  urls.py  views.py
nova_poshta/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
orders/: admin.py  admin_form.py  models.py  urls.py  (+1 more)
(+91 files in other folders)
